# seekCPP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
modules/core/: CMakeLists.txt
modules/core/include/core/: hello.hpp
modules/core/src/: hello.cpp
modules/io/: CMakeLists.txt
modules/io/include/io/: printer.hpp
modules/io/src/: printer.cpp
modules/math/: CMakeLists.txt
modules/math/include/math/: calculator.hpp
modules/math/src/: calculator.cpp
modules/memory/: CMakeLists.txt
modules/memory/include/memory/: relaxed.hpp
modules/memory/src/: relaxed.cpp
src/: main.cpp
tests/: CMakeLists.txt  test_hello.cpp
